After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 672587 - regression in about dialog credits spacing
regression in about dialog credits spacing
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2012-03-21 20:05 UTC by William Jon McCann
Modified: 2012-03-22 17:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot (17.19 KB, image/png)
2012-03-21 20:05 UTC, William Jon McCann
  Details
Reduce row spacing in about dialog credits (1.01 KB, patch)
2012-03-21 20:06 UTC, William Jon McCann
committed Details | Review
Ensure skipped row between sections has a nonzero height (713 bytes, patch)
2012-03-21 20:06 UTC, William Jon McCann
committed Details | Review
screenshot (after) (17.12 KB, image/png)
2012-03-21 20:52 UTC, William Jon McCann
  Details

Description William Jon McCann 2012-03-21 20:05:23 UTC
Created attachment 210280 [details]
screenshot

At some point the about dialogs credits page got all stretched out.

In the attached screenshot you can see two problems.

 1. The row spacing is much too large
 2. There is no separation between sections (eg. above Documented by)
Comment 1 William Jon McCann 2012-03-21 20:06:02 UTC
Created attachment 210281 [details] [review]
Reduce row spacing in about dialog credits
Comment 2 William Jon McCann 2012-03-21 20:06:05 UTC
Created attachment 210282 [details] [review]
Ensure skipped row between sections has a nonzero height
Comment 3 Cosimo Cecchi 2012-03-21 20:49:12 UTC
Review of attachment 210281 [details] [review]:

Looks good, should probably ask for a freeze break
Comment 4 Cosimo Cecchi 2012-03-21 20:49:32 UTC
Review of attachment 210282 [details] [review]:

Same
Comment 5 William Jon McCann 2012-03-21 20:52:08 UTC
Created attachment 210290 [details]
screenshot (after)