Reduce row spacing in about dialog credits

https://bugzilla.gnome.org/show_bug.cgi?id=672587